--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,22 @@
   position: relative;
 }
 
-h1{
-    background-color: #fff;
-    font-size: 50px;
-    padding: 20px 40px;
+h1 {
+  background-color: #fff;
+  font-size: 50px;
+  padding: 20px 40px;
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  box-shadow: rgba(0,0,0,0.35) 0px 5px 15px;
+}
+button{
+    padding: 10px 20px;
+    border:none;
+    margin: 10px;
+    width: 150px;
+    letter-spacing: 1.2px;
+    cursor: pointer;
+    transition: .3s;
     border-radius: 20px;
 }
+
+button:hover
